# dotprompt

./: .bazelignore  .bazelrc  .gitignore  .release-please-manifest.json  BUILD.bazel  MODULE.bazel  go.MODULE.bazel
.github/workflows/: python.yml
etc/bazel/: go.bazelrc
go/: CHANGELOG.md  README.md  go.mod  go.sum
go/dotprompt/: BUILD.bazel  dotprompt.go  environment.go  environment_test.go  parse.go  parse_test.go  spec_test.go  types.go
go/dotprompt/helpers/: BUILD.bazel  helpers.go  helpers_test.go
go/dotprompt/stores/: BUILD.bazel  dir.go  dir_test.go
go/examples/: BUILD.bazel  main.go  tools.go
go/examples/tools/: BUILD.bazel  main.go
go/src/dotprompt/: BUILD.bazel  environment.go  environment_test.go  parse.go  types.go
go/src/dotprompt/helpers/: BUILD.bazel  helpers.go  helpers_test.go
go/src/dotprompt/stores/: BUILD.bazel  dir.go  dir_test.go
java/: CHANGELOG.md
js/: CHANGELOG.md  package-lock.json  package.json
python/: captainhook.json  noxfile.py  tox.ini
python/dotpromptz/: CHANGELOG.md  pyproject.toml
python/handlebarrz/: CHANGELOG.md  pyproject.toml
rs/: CHANGELOG.md
spec/: BUILD.bazel
