load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "examples_lib",
    srcs = [
        "main.go",
        "tools.go",
    ],
    importpath = "github.com/google/dotprompt/go/examples",
    visibility = ["//visibility:private"],
    deps = [
        "//go/src/dotprompt",
        "//go/src/dotprompt/stores",
    ],
)

go_binary(
    name = "examples",
    embed = [":examples_lib"],
    visibility = ["//visibility:public"],
)
