# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[project]
authors = [{ name = "Yesudeep Mangalapilly", email = "yesudeep@google.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Text Processing :: Markup",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "strenum>=0.4.15 ; python_version < '3.11'",
  "structlog>=25.2.0",
]
description = "Handlebars library for Python based on handlebars-rust."
name = "dotprompt_handlebars"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.1"

[build-system]
build-backend = "maturin"
requires      = ["maturin>=1.4,<2.0"]

[tool.maturin]
features      = ["pyo3/extension-module"]
module-name   = "handlebarrz._native"
python-source = "src"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
  "maturin[patchelf]>=1.8.3",
  "ziglang>=0.14.0",
]
