load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "helpers",
    srcs = ["helpers.go"],
    importpath = "github.com/google/dotprompt/go/dotprompt/helpers",
    visibility = ["//visibility:public"],
    deps = ["@com_github_aymerick_raymond//:raymond"],
)

go_test(
    name = "helpers_test",
    size = "small",
    srcs = ["helpers_test.go"],
    embed = [":helpers"],
    deps = [
        "@com_github_aymerick_raymond//:raymond",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
