load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "stores",
    srcs = ["dir.go"],
    importpath = "github.com/google/dotprompt/go/dotprompt/stores",
    visibility = ["//visibility:public"],
    deps = ["//go/dotprompt"],
)

go_test(
    name = "stores_test",
    size = "small",
    srcs = ["dir_test.go"],
    embed = [":stores"],
    deps = [
        "//go/dotprompt",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
