load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tools_lib",
    srcs = ["main.go"],
    importpath = "github.com/google/dotprompt/go/examples/tools",
    visibility = ["//visibility:private"],
    deps = [
        "//go/dotprompt",
        "//go/dotprompt/stores",
    ],
)

go_binary(
    name = "tools",
    embed = [":tools_lib"],
    visibility = ["//visibility:public"],
)
